# WhoIntedMe

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  combined_data.json  manage.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: standard.md
.github/workflows/: python-lint.yml
WhoIntedMe/: asgi.py  settings.py  urls.py  wsgi.py
app/src/: index.js
app/src/components/: App.js  GlowingBackground.css  GlowingBackground.js  LandingPage.js  NavBar.css  NavBar.js  ProfileCards.js  ProfileTemplate.js  SearchBar.css  SearchBar.js
app/templates/: home.html  login.html  profile.html
back/: api.py  models.py  riot_api.py
front/components/: App.js
front/static/: index.js
front/templates/: base.html  sign_up.html
instance/: database.db
static/: readme.md
templates/: readme.md
test/: conftest.py  test_add_user.py  test_api.py  test_delete.py  test_riot_api.py
