[tool.poetry]
name = "whointedme"
version = "0.1.0"
description = ""
authors = ["TeachMeTW <teachmetheways652@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.8"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
